--- a/test.html
+++ b/test.html
@@ -22,12 +22,13 @@
       //ensure the assert function is available
       var assert = chai.assert;
   </script>
-  
+
     <script>
 
         mocha.checkLeaks();
         mocha.run();
     </script>
+    <script src="js/settings-bill.js" charset="utf-8"></script>
     <script src="test/settingsbill.test.js" charset="utf-8"></script>
 </body>
 
