--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>factory functions</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.min.js" charset="utf-8"></script>
@@ -25,7 +26,7 @@
 
     <script>
 
-        mocha.checkLeaks();
+       // mocha.checkLeaks();
         mocha.run();
     </script>
     <script src="js/settings-bill.js" charset="utf-8"></script>
